--- a/.storybook/public/style/preview.scss
+++ b/.storybook/public/style/preview.scss
@@ -12,6 +12,7 @@
 @import "../../../src/4-components/A2-Alerts/A2-2-Alert-InPage/style.scss";
 @import "../../../src/4-components/B1-Back-to-top/B1-1-Back-to-top/style.scss";
 @import "../../../src/4-components/B3-Breadcrumbs/B3-1-Breadcrumbs/style.scss";
+@import "../../../src/4-components/L2-Logos/L2-1-Primary-Logo/style.scss";
 
 /* Documentation Styling */
 #docs-root {
