--- a/src/_core/_typography.scss
+++ b/src/_core/_typography.scss
@@ -1,38 +1,108 @@
 /* Typography */
 
+/* H1 */
 h1,
 .act-h1 {
-	font-size: $act-font-size__desktop-h1;
-	font-weight: $act-font-weight__bold;
-	line-height: $act-line-height__120;
+	color: 							$act-colour__black;
+	font-size: 					$act-font-size__desktop-h1;
+	font-weight: 				$act-font-weight__bold;
+	line-height: 				$act-line-height__120;
+	&.large,
+	&-large {
+		font-size: 				$act-font-size__desktop-h1-large;
+		font-weight: 			$act-font-weight__semibold;
+		line-height: 			$act-line-height__100;
+	}
+	@include devices(mobile) {
+		font-size: 				$act-font-size__mobile-h1;
+		&.large,
+		&-large {
+			font-size: 			$act-font-size__mobile-h1-large;
+		}
+	}
 }
+
+/* H2 */
 h2,
 .act-h2 {
-	font-size: $act-font-size__desktop-h2;
-	font-weight: $act-font-weight__semibold;
+	color: 							$act-colour__black;
+	font-size: 					$act-font-size__desktop-h2;
+	font-weight: 				$act-font-weight__semibold;
+	line-height: 				$act-line-height__120;
+	@include devices(mobile) {
+		font-size: 				$act-font-size__mobile-h2;
+	}
 }
+
+/* H3 */
 h3,
 .act-h3 {
-	font-size: $act-font-size__desktop-h3;
-	font-weight: $act-font-weight__semibold;
+	color: 							$act-colour__black;
+	font-size: 					$act-font-size__desktop-h3;
+	font-weight: 				$act-font-weight__semibold;
+	line-height: 				$act-line-height__120;
+	@include devices(mobile) {
+		font-size: 				$act-font-size__mobile-h3;
+	}
 }
+
+/* H4 */
 h4,
 .act-h4 {
-	font-size: $act-font-size__desktop-h4;
-	font-weight: $act-font-weight__semibold;
+	color: 							$act-colour__black;
+	font-size: 					$act-font-size__desktop-h4;
+	font-weight: 				$act-font-weight__semibold;
+	line-height: 				$act-line-height__130;
+	@include devices(mobile) {
+		font-size: 				$act-font-size__mobile-h4;
+	}
 }
+
+/* H5 */
 h5,
 .act-h5 {
-	font-size: $act-font-size__desktop-h5;
-	font-weight: $act-font-weight__semibold;
+	color: 							$act-colour__black;
+	font-size: 					$act-font-size__desktop-h5;
+	font-weight: 				$act-font-weight__semibold;
+	line-height: 				$act-line-height__130;
+	@include devices(mobile) {
+		font-size: 				$act-font-size__mobile-h5;
+	}
 }
+
+/* H6 */
 h6,
 .act-h6 {
-	font-size: $act-font-size__desktop-h6;
-	font-weight: $act-font-weight__semibold;
+	color: 							$act-colour__black;
+	font-size: 					$act-font-size__desktop-h6;
+	font-weight: 				$act-font-weight__semibold;
+	line-height: 				$act-line-height__130;
+	@include devices(mobile) {
+		font-size: 				$act-font-size__mobile-h6;
+	}
 }
+
+/* P */
 p,
 .act-p {
-	font-size: $act-font-size__desktop-p;
-	font-weight: $act-font-weight__regular;
+	color: 							$act-colour__black;
+	font-size: 					$act-font-size__desktop-p;
+	font-weight: 				$act-font-weight__regular;
+	line-height: 				$act-line-height__150;
+	&.bold,
+	&-bold {
+		font-weight: 			$act-font-weight__semibold;
+	}
+	@include devices(mobile) {
+		font-size: 				$act-font-size__mobile-p;
+	}
+}
+
+/* A */
+a,
+.act-a {
+	color: 							$act-colour__black;
+	font-size: 					inherit;
+	font-weight:				inherit;
+	line-height:				inherit;
 }
