--- a/src/_core/_reset.scss
+++ b/src/_core/_reset.scss
@@ -27,8 +27,8 @@ code {
 .sb-show-main {
 	#root {
 		/* This is the div the component is rendered into in Canvas mode */
-		display: flex;
-		flex-direction: column;
-		width: 100%;
+		// display: flex;
+		// flex-direction: column;
+		// width: 100%;
 	}
 }
