--- a/src/_core/colour.scss
+++ b/src/_core/colour.scss
@@ -4,10 +4,14 @@
 $act-colour__black: 										#111111;
 $act-colour__green: 										#098660;
 $act-colour__grey: 											#777777;
+$act-colour__indigo: 										#311C6A;
 $act-colour__light-grey: 								#F6F6F6;
+$act-colour__medium-purple:							#9A78F2;
 $act-colour__middle-grey: 							#ADADAD;
 $act-colour__purple: 										#472D8C;
+$act-colour__plum-purple: 							#6042AE;
 $act-colour__red: 											#BA2133;
+$act-colour__violet: 										#1E0F48;
 $act-colour__white: 										#FFFFFF;
 $act-colour__yellow: 										#F2C94C;
 
