--- a/.storybook/public/style/preview.scss
+++ b/.storybook/public/style/preview.scss
@@ -11,8 +11,11 @@
 @import "../../../src/4-components/A2-Alerts/A2-1-Alert-Global/style.scss";
 @import "../../../src/4-components/A2-Alerts/A2-2-Alert-InPage/style.scss";
 @import "../../../src/4-components/B1-Back-to-top/B1-1-Back-to-top/style.scss";
+@import "../../../src/4-components/B4-Buttons/B4-1-Primary-Button/style.scss";
 @import "../../../src/4-components/B3-Breadcrumbs/B3-1-Breadcrumbs/style.scss";
 @import "../../../src/4-components/L2-Logos/L2-1-Primary-Logo/style.scss";
+@import "../../../src/4-components/M3-Masthead/M3-1-Masthead/style.scss";
+@import "../../../src/4-components/W1-Wayfinding/W1-6-NavBar/style.scss";
 
 /* Documentation Styling */
 #docs-root {
