--- a/src/_core/fonts.scss
+++ b/src/_core/fonts.scss
@@ -16,6 +16,7 @@ $act-font-size__desktop-h6: 			16px;
 $act-font-size__desktop-p: 				18px;
 $act-font-size__desktop-p-large: 	20px;
 $act-font-size__desktop-p-small: 	14px;
+$act-font-size__desktop-p-xsmall: 10px;
 
 $act-font-size__tablet-h1: 				$act-font-size__desktop-h1;
 $act-font-size__tablet-h1-large: 	$act-font-size__desktop-h1-large;
@@ -27,6 +28,7 @@ $act-font-size__tablet-h6: 				$act-font-size__desktop-h6;
 $act-font-size__tablet-p: 				$act-font-size__desktop-p;
 $act-font-size__tablet-p-large: 	$act-font-size__desktop-p-large;
 $act-font-size__tablet-p-small: 	$act-font-size__desktop-p-small;
+$act-font-size__tablet-p-xsmall: 	$act-font-size__desktop-p-xsmall;
 
 $act-font-size__mobile-h1: 				40px;
 $act-font-size__mobile-h1-large: 	54px;
@@ -38,6 +40,7 @@ $act-font-size__mobile-h6: 				16px;
 $act-font-size__mobile-p: 				18px;
 $act-font-size__mobile-p-large: 	18px;
 $act-font-size__mobile-p-small: 	14px;
+$act-font-size__mobile-p-xsmall: 	10px;
 
 $act-font-size__alt-tags: 				14px;
 
