--- a/src/4-components/M3-Masthead/M3-1-Masthead/style.scss
+++ b/src/4-components/M3-Masthead/M3-1-Masthead/style.scss
@@ -24,4 +24,30 @@
 			justify-content: flex-end;
 		}
 	}
+	&__nav {
+		display: flex;
+		flex-direction: row;
+	}
+	@include devices(mobile) {
+		&__container {
+			align-items: center;
+			flex-direction: column;
+			justify-content: center;
+			padding: map-get($act-space, "desktop-2") map-get($act-space, "desktop-2");
+		}
+		&__content {
+			flex-direction: column;
+			justify-content: center;
+			width: 100%;
+			&:last-of-type {
+				justify-content: center;
+			}
+			.act-button {
+				width: 100%;
+			}
+		}
+		&__nav {
+			display: none;
+		}
+	}
 }
