--- a/src/_core/_tokens.scss
+++ b/src/_core/_tokens.scss
@@ -2,3 +2,5 @@
 @import "./spacing.scss";
 @import "./breakpoints.scss";
 @import "./fonts.scss";
+@import "./radius.scss";
+@import "./shadow.scss";
