--- a/.storybook/public/style/preview.scss
+++ b/.storybook/public/style/preview.scss
@@ -13,6 +13,7 @@
 @import "../../../src/4-components/B1-Back-to-top/B1-1-Back-to-top/style.scss";
 @import "../../../src/4-components/B4-Buttons/B4-1-Primary-Button/style.scss";
 @import "../../../src/4-components/B3-Breadcrumbs/B3-1-Breadcrumbs/style.scss";
+@import "../../../src/4-components/F1-Footers/F1-1-Footer-AoC/style.scss";
 @import "../../../src/4-components/L2-Logos/L2-1-Primary-Logo/style.scss";
 @import "../../../src/4-components/M3-Masthead/M3-1-Masthead/style.scss";
 @import "../../../src/4-components/W1-Wayfinding/W1-6-NavBar/style.scss";
@@ -22,7 +23,7 @@
 	margin-bottom: 200px;
 	.sbdocs {
 		&-content {
-
+			max-width: $act-page-max-width;
 		}
 		table {
 			width: $act-page-full-width;
