--- a/src/_core/fonts.scss
+++ b/src/_core/fonts.scss
@@ -3,6 +3,10 @@
 /* Import Montserrat from Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
 
+/* Import FontAwesome from Local */
+@import url('/fonts/fontawesome/css/fontawesome.css');
+@import url('/fonts/fontawesome/css/solid.css');
+
 /* Variables */
 $montserrat: 'Montserrat', sans-serif;
 
