--- a/src/4-components/B4-Buttons/style.scss
+++ b/src/4-components/B4-Buttons/style.scss
@@ -83,7 +83,7 @@
 		}
 	}
 	&__secondary {
-		background-color: $act-colour__light-grey;
+		background-color: $act-colour__white;
 		border: 2px solid $act-colour__purple;
 		color: $act-colour__purple;
 		i {
