--- a/src/_core/_flex.scss
+++ b/src/_core/_flex.scss
@@ -10,6 +10,10 @@
 		background-color: $act-colour__purple;
 		color: $act-colour__white;
 	}
+	&-violet {
+		background-color: $act-colour__violet;
+		color: $act-colour__white;
+	}
 	&__container {
 		display: flex;
 		justify-content: center;
@@ -76,8 +80,8 @@
 				width: 				100%;
 			}
 			@include devices(tablet) {
-				max-width: 		33.333%;
-				width: 				33.333%;
+				max-width: 		50%;
+				width: 				50%;
 			}
 			@include devices(desktop) {
 				max-width: 		33.333%;
@@ -141,8 +145,6 @@
 			}
 		}
 		.act-box {
-			background-color: $act-colour__purple;
-			color: $act-colour__white;
 			padding: 10px;
 			@include devices(mobile) {
 				margin: calc(map-get($act-space, "desktop-1")/2);
