--- a/src/_core/_reset.scss
+++ b/src/_core/_reset.scss
@@ -17,7 +17,8 @@ code {
 	font-family: monospace !important;
 }
 i.fa,
-i.fa-solid {
+i.fa-solid,
+i.fa-brands {
 	/* Centre align Fontawesome icons within their container */
 	align-items: center;
 	justify-content: center;
