--- a/src/_core/fonts.scss
+++ b/src/_core/fonts.scss
@@ -6,6 +6,7 @@
 /* Import FontAwesome from Local */
 @import url('/fonts/fontawesome/css/fontawesome.css');
 @import url('/fonts/fontawesome/css/solid.css');
+@import url('/fonts/fontawesome/css/brands.css');
 
 /* Variables */
 $montserrat: 'Montserrat', sans-serif;
