--- a/src/4-components/A2-Alerts/A2-1-Alert-Global/style.scss
+++ b/src/4-components/A2-Alerts/A2-1-Alert-Global/style.scss
@@ -11,7 +11,7 @@
 		flex-direction: row;
 		position: relative;
 		justify-content: space-between;
-		max-width: $act-page-max-width;
+		max-width: 100%;
 		width: 100%;
 	}
 	&__content {
