--- a/src/4-components/L2-Logos/L2-1-Primary-Logo/style.scss
+++ b/src/4-components/L2-Logos/L2-1-Primary-Logo/style.scss
@@ -1,12 +1,20 @@
-$act-local-logo-border: 									1px solid $act-colour__grey;
-$act-local-logo-space: 										map-get($act-space, "desktop-2");
-$act-local-logo-height-mobile: 						36px;
-$act-local-logo-height-tablet: 						map-get($act-space, "desktop-5");
-$act-local-logo-height-desktop: 					map-get($act-space, "desktop-6");
-$act-local-cobrand-logo-height-mobile: 		calc(($act-local-logo-height-mobile/100)*90);
-$act-local-cobrand-logo-height-tablet: 		calc(($act-local-logo-height-tablet/100)*90);
-$act-local-cobrand-logo-height-desktop: 	calc(($act-local-logo-height-desktop/100)*90);
-$act-local-cobrand-text-height-desktop: 	calc(($act-local-logo-height-desktop/100)*68);
+$act-local-logo-border: 1px solid $act-colour__grey;
+$act-local-logo-space: map-get($act-space, "desktop-2");
+$act-local-logo-height-mobile: 36px;
+$act-local-logo-height-tablet: map-get($act-space, "desktop-5");
+$act-local-logo-height-desktop: map-get($act-space, "desktop-6");
+$act-local-cobrand-logo-height-mobile: calc(
+	($act-local-logo-height-mobile/100) * 90
+);
+$act-local-cobrand-logo-height-tablet: calc(
+	($act-local-logo-height-tablet/100) * 90
+);
+$act-local-cobrand-logo-height-desktop: calc(
+	($act-local-logo-height-desktop/100) * 90
+);
+$act-local-cobrand-text-height-desktop: calc(
+	($act-local-logo-height-desktop/100) * 68
+);
 
 .act-logos {
 	&__container {
@@ -21,36 +29,36 @@ $act-local-cobrand-text-height-desktop: 	calc(($act-local-logo-height-desktop/10
 				img {
 					display: block;
 					@include devices(mobile) {
-						height: 			$act-local-logo-height-mobile;
-						max-height: 	$act-local-logo-height-mobile;
+						height: $act-local-logo-height-mobile;
+						max-height: $act-local-logo-height-mobile;
 					}
 					@include devices(tablet) {
-						height: 			$act-local-logo-height-tablet;
-						max-height: 	$act-local-logo-height-tablet;
+						height: $act-local-logo-height-tablet;
+						max-height: $act-local-logo-height-tablet;
 					}
 					@include devices(desktop) {
-						height: 			$act-local-logo-height-desktop;
-						max-height: 	$act-local-logo-height-desktop;
+						height: $act-local-logo-height-desktop;
+						max-height: $act-local-logo-height-desktop;
 					}
 				}
 			}
 			&-cobrand {
 				&-logo {
-					border-left: 		$act-local-logo-border;
-					margin-left: 		$act-local-logo-space;
-					padding-left: 	$act-local-logo-space;
+					border-left: $act-local-logo-border;
+					margin-left: $act-local-logo-space;
+					padding-left: $act-local-logo-space;
 					img {
 						display: block;
 						@include devices(mobile) {
-							height: 		$act-local-cobrand-logo-height-mobile;
+							height: $act-local-cobrand-logo-height-mobile;
 							max-height: $act-local-cobrand-logo-height-mobile;
 						}
 						@include devices(tablet) {
-							height: 		$act-local-cobrand-logo-height-tablet;
+							height: $act-local-cobrand-logo-height-tablet;
 							max-height: $act-local-cobrand-logo-height-tablet;
 						}
 						@include devices(desktop) {
-							height: 		$act-local-cobrand-logo-height-desktop;
+							height: $act-local-cobrand-logo-height-desktop;
 							max-height: $act-local-cobrand-logo-height-desktop;
 						}
 					}
@@ -78,4 +86,3 @@ $act-local-cobrand-text-height-desktop: 	calc(($act-local-logo-height-desktop/10
 		}
 	}
 }
-
