--- a/src/_core/_flex.scss
+++ b/src/_core/_flex.scss
@@ -5,6 +5,20 @@
 	width: $act-page-full-width;
 	&-light-grey {
 		background-color: $act-colour__light-grey;
+		&-gradient {
+			background: linear-gradient(
+				180deg,
+				#dfdfdf 0%,
+				#e6e5e5 0.01%,
+				#f0f0f0 100%
+			);
+			background-color: linear-gradient(
+				180deg,
+				#dfdfdf 0%,
+				#e6e5e5 0.01%,
+				#f0f0f0 100%
+			);
+		}
 	}
 	&-purple {
 		background-color: $act-colour__purple;
@@ -19,13 +33,16 @@
 		justify-content: center;
 		width: $act-page-full-width;
 		@include devices(mobile) {
-			padding: calc(map-get($act-space, "desktop-5") - 4px) calc(map-get($act-space, "desktop-2") - 4px);
+			padding: calc(map-get($act-space, "desktop-5") - 4px)
+				calc(map-get($act-space, "desktop-2") - 4px);
 		}
 		@include devices(tablet) {
-			padding: calc(map-get($act-space, "desktop-5") - 8px) calc(map-get($act-space, "desktop-3") + 4px);
+			padding: calc(map-get($act-space, "desktop-5") - 8px)
+				calc(map-get($act-space, "desktop-3") + 4px);
 		}
 		@include devices(desktop) {
-			padding: calc(map-get($act-space, "desktop-5") - 12px) calc(map-get($act-space, "desktop-4") + 4px);
+			padding: calc(map-get($act-space, "desktop-5") - 12px)
+				calc(map-get($act-space, "desktop-4") + 4px);
 		}
 	}
 	&__grid {
@@ -46,116 +63,122 @@
 	}
 	.act-col {
 		flex-grow: 1;
-		&-sm-2 { /* 2 Column *//* 16.666% *//* 50/33/16 */
+		&-sm-2 {
+			/* 2 Column */ /* 16.666% */ /* 50/33/16 */
 			@include devices(mobile) {
-				max-width: 		50%;
-				width: 				50%;
+				max-width: 50%;
+				width: 50%;
 			}
 			@include devices(tablet) {
-				max-width: 		33.333%;
-				width: 				33.333%;
+				max-width: 33.333%;
+				width: 33.333%;
 			}
 			@include devices(desktop) {
-				max-width: 		16.666%;
-				width: 				16.666%;
+				max-width: 16.666%;
+				width: 16.666%;
 			}
 		}
-		&-sm-3 { /* 3 Column *//* 25% *//* 100/50/25 */
+		&-sm-3 {
+			/* 3 Column */ /* 25% */ /* 100/50/25 */
 			@include devices(mobile) {
-				max-width: 		100%;
-				width: 				100%;
+				max-width: 100%;
+				width: 100%;
 			}
 			@include devices(tablet) {
-				max-width: 		50%;
-				width: 				50%;
+				max-width: 50%;
+				width: 50%;
 			}
 			@include devices(desktop) {
-				max-width: 		25%;
-				width: 				25%;
+				max-width: 25%;
+				width: 25%;
 			}
 		}
-		&-sm-4 { /* 4 Column *//* 33.333% *//* 100/33/33 */
+		&-sm-4 {
+			/* 4 Column */ /* 33.333% */ /* 100/33/33 */
 			@include devices(mobile) {
-				max-width: 		100%;
-				width: 				100%;
+				max-width: 100%;
+				width: 100%;
 			}
 			@include devices(tablet) {
-				max-width: 		50%;
-				width: 				50%;
+				max-width: 50%;
+				width: 50%;
 			}
 			@include devices(desktop) {
-				max-width: 		33.333%;
-				width: 				33.333%;
+				max-width: 33.333%;
+				width: 33.333%;
 			}
 		}
-		&-sm-6 { /* 6 Column *//* 50% *//* 100/50/50 */
+		&-sm-6 {
+			/* 6 Column */ /* 50% */ /* 100/50/50 */
 			@include devices(mobile) {
-				max-width: 		100%;
-				width: 				100%;
+				max-width: 100%;
+				width: 100%;
 			}
 			@include devices(tablet) {
-				max-width: 		50%;
-				width: 				50%;
+				max-width: 50%;
+				width: 50%;
 			}
 			@include devices(desktop) {
-				max-width: 		50%;
-				width: 				50%;
+				max-width: 50%;
+				width: 50%;
 			}
 		}
-		&-sm-8 { /* 8 Column *//* 66.666% *//* 100/66/66 */
+		&-sm-8 {
+			/* 8 Column */ /* 66.666% */ /* 100/66/66 */
 			@include devices(mobile) {
-				max-width: 		100%;
-				width: 				100%;
+				max-width: 100%;
+				width: 100%;
 			}
 			@include devices(tablet) {
-				max-width: 		66.666%;
-				width: 				66.666%;
+				max-width: 66.666%;
+				width: 66.666%;
 			}
 			@include devices(desktop) {
-				max-width: 		66.666%;
-				width: 				66.666%;
+				max-width: 66.666%;
+				width: 66.666%;
 			}
 		}
-		&-sm-9 { /* 9 Column *//* 75% *//* 100/100/75 */
+		&-sm-9 {
+			/* 9 Column */ /* 75% */ /* 100/100/75 */
 			@include devices(mobile) {
-				max-width: 		100%;
-				width: 				100%;
+				max-width: 100%;
+				width: 100%;
 			}
 			@include devices(tablet) {
-				max-width: 		100%;
-				width: 				100%;
+				max-width: 100%;
+				width: 100%;
 			}
 			@include devices(desktop) {
-				max-width: 		75%;
-				width: 				75%;
+				max-width: 75%;
+				width: 75%;
 			}
 		}
-		&-sm-12 { /* 12 Column *//* 100% *//* 100/100/100 */
+		&-sm-12 {
+			/* 12 Column */ /* 100% */ /* 100/100/100 */
 			@include devices(mobile) {
-				max-width: 		100%;
-				width: 				100%;
+				max-width: 100%;
+				width: 100%;
 			}
 			@include devices(tablet) {
-				max-width: 		100%;
-				width: 				100%;
+				max-width: 100%;
+				width: 100%;
 			}
 			@include devices(desktop) {
-				max-width: 		100%;
-				width: 				100%;
+				max-width: 100%;
+				width: 100%;
 			}
 		}
 		.act-box {
 			padding: 10px;
 			@include devices(mobile) {
-				margin: calc(map-get($act-space, "desktop-1")/2);
+				margin: calc(map-get($act-space, "desktop-1") / 2);
 			}
 			@include devices(tablet) {
-				margin: calc(map-get($act-space, "desktop-2")/2);
+				margin: calc(map-get($act-space, "desktop-2") / 2);
 			}
 			@include devices(desktop) {
-				margin: calc(map-get($act-space, "desktop-3")/2);
+				margin: calc(map-get($act-space, "desktop-3") / 2);
 			}
 		}
 	}
 }
-
