--- a/src/_core/colour.scss
+++ b/src/_core/colour.scss
@@ -1,56 +1,56 @@
 /* Colour Values */
 
 /* Variables */
-$act-colour__black: 										#111111;
-$act-colour__green: 										#098660;
-$act-colour__grey: 											#777777;
-$act-colour__indigo: 										#311C6A;
-$act-colour__light-grey: 								#F6F6F6;
-$act-colour__medium-purple:							#9A78F2;
-$act-colour__middle-grey: 							#ADADAD;
-$act-colour__purple: 										#472D8C;
-$act-colour__plum-purple: 							#6042AE;
-$act-colour__red: 											#BA2133;
-$act-colour__violet: 										#1E0F48;
-$act-colour__white: 										#FFFFFF;
-$act-colour__yellow: 										#F2C94C;
+$act-colour__black: #111111;
+$act-colour__green: #098660;
+$act-colour__grey: #777777;
+$act-colour__indigo: #311c6a;
+$act-colour__light-grey: #f6f6f6;
+$act-colour__medium-purple: #9a78f2;
+$act-colour__middle-grey: #adadad;
+$act-colour__purple: #472d8c;
+$act-colour__plum-purple: #6042ae;
+$act-colour__red: #ba2133;
+$act-colour__violet: #1e0f48;
+$act-colour__white: #ffffff;
+$act-colour__yellow: #f2c94c;
 
-$act-colour__region-belconnen: 					#377E7A;
-$act-colour__region-gungahlin: 					#90A630;
-$act-colour__region-innercity: 					#008FC5;
-$act-colour__region-tuggeranong: 				#C6B30B;
-$act-colour__region-wooden: 						#F15F50;
+$act-colour__region-belconnen: #377e7a;
+$act-colour__region-gungahlin: #90a630;
+$act-colour__region-innercity: #008fc5;
+$act-colour__region-tuggeranong: #c6b30b;
+$act-colour__region-wooden: #f15f50;
 
-$act-colour__district-inner-north: 			$act-colour__region-innercity;
-$act-colour__district-inner-south: 			#004868;
-$act-colour__district-molonglo-valley: 	#93171B;
-$act-colour__district-weston-creek: 		#F14C76;
-$act-colour__district-wooden: 					$act-colour__region-wooden;
+$act-colour__district-inner-north: $act-colour__region-innercity;
+$act-colour__district-inner-south: #004868;
+$act-colour__district-molonglo-valley: #93171b;
+$act-colour__district-weston-creek: #f14c76;
+$act-colour__district-wooden: $act-colour__region-wooden;
 
-$act-colour__health-dark-blue: 					#2C4EAB;
-$act-colour__health-light-blue: 				#0076C8;
+$act-colour__health-dark-blue: #2c4eab;
+$act-colour__health-light-blue: #0076c8;
 
 /* Map */
 $act-colour: (
-	"black": 										$act-colour__black,
-	"district-inner-north": 		$act-colour__district-inner-north,
-	"district-inner-south": 		$act-colour__district-inner-south,
+	"black": $act-colour__black,
+	"district-inner-north": $act-colour__district-inner-north,
+	"district-inner-south": $act-colour__district-inner-south,
 	"district-molonglo-valley": $act-colour__district-molonglo-valley,
-	"district-weston-creek": 		$act-colour__district-weston-creek,
-	"district-wooden": 					$act-colour__district-wooden,
-	"green": 										$act-colour__green,
-	"grey": 										$act-colour__grey,
-	"health-dark-blue":					$act-colour__health-dark-blue,
-	"health-light-blue":				$act-colour__health-light-blue,
-	"light-grey": 							$act-colour__light-grey,
-	"middle-grey": 							$act-colour__middle-grey,
-	"purple": 									$act-colour__purple,
-	"red": 											$act-colour__red,
-	"region-belconnen": 				$act-colour__region-belconnen,
-	"region-gungahlin": 				$act-colour__region-gungahlin,
-	"region-innercity": 				$act-colour__region-innercity,
-	"region-tuggeranong": 			$act-colour__region-tuggeranong,
-	"region-wooden": 						$act-colour__region-wooden,
-	"white": 										$act-colour__white,
-	"yellow": 									$act-colour__yellow,
+	"district-weston-creek": $act-colour__district-weston-creek,
+	"district-wooden": $act-colour__district-wooden,
+	"green": $act-colour__green,
+	"grey": $act-colour__grey,
+	"health-dark-blue": $act-colour__health-dark-blue,
+	"health-light-blue": $act-colour__health-light-blue,
+	"light-grey": $act-colour__light-grey,
+	"middle-grey": $act-colour__middle-grey,
+	"purple": $act-colour__purple,
+	"red": $act-colour__red,
+	"region-belconnen": $act-colour__region-belconnen,
+	"region-gungahlin": $act-colour__region-gungahlin,
+	"region-innercity": $act-colour__region-innercity,
+	"region-tuggeranong": $act-colour__region-tuggeranong,
+	"region-wooden": $act-colour__region-wooden,
+	"white": $act-colour__white,
+	"yellow": $act-colour__yellow,
 );
