--- a/src/_core/colour.scss
+++ b/src/_core/colour.scss
@@ -10,7 +10,7 @@ $act-colour__medium-purple: #9a78f2;
 $act-colour__middle-grey: #adadad;
 $act-colour__purple: #472d8c;
 $act-colour__plum-purple: #6042ae;
-$act-colour__red: #ba2133;
+$act-colour__red: #BA2133;
 $act-colour__violet: #1e0f48;
 $act-colour__white: #ffffff;
 $act-colour__yellow: #f2c94c;
